--- a/views/index.ejs
+++ b/views/index.ejs
@@ -293,8 +293,8 @@
                                                 </script>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+                                                <a href="/comments/<%= result._id %>"><button type="button" class="btn btn-primary">리뷰 보기</button></a>
                                             </div>
                                         </div>
                                     </div>
