--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -41,7 +41,7 @@
                         <div class="col-md-2"><%= comment.created_at.toLocaleDateString() %></div>
                     </div>
                     <div class="card-text mb-2">
-                        <%= comment.comment %>
+                        <%= comment.description %>
                     </div>
                     <a href="/mypage/edit/<%= comment._id %>" class="btn btn-info">Edit</a>
                     <form action="/mypage/del/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline">
