--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -21,11 +21,13 @@
                 리뷰 달기
             </div>
             <div class="card-body">
-                <form>
+                <form action="/comments/write" method="POST">
                     <div class="form-group">
                         <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다."></textarea>
                     </div>
                     <div class=" d-flex justify-content-end">
+                        <input type="hidden" name="writer_id" value="temp">
+                        <input type="hidden" name="hospital_id" value="<%= hospital._id %>">
                         <button type="submit" class="btn btn-primary">완료</button>
                     </div>
                 </form>
@@ -43,9 +45,8 @@
                     <div class="card-text mb-2">
                         <%= comment.description %>
                     </div>
-                    <a href="/mypage/edit/<%= comment._id %>" class="btn btn-info">Edit</a>
-                    <form action="/mypage/del/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline">
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                    <form action="/comments/del/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline d-flex justify-content-end">
+                        <button type="submit" class="btn btn-danger btn-sm">삭제</button>
                     </form>
                 </div>
             </div>
