--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -45,7 +45,8 @@
                     <div class="card-text mb-2">
                         <%= comment.description %>
                     </div>
-                    <form action="/comments/del/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline d-flex justify-content-end">
+                    <form action="/comments/delete/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline d-flex justify-content-end" onsubmit="if(!confirm('댓글을 삭제하시겠습니까?')) {return false; }">
+                        <input type="hidden" name="hospital_id" value="<%= hospital._id %>">
                         <button type="submit" class="btn btn-danger btn-sm">삭제</button>
                     </form>
                 </div>
