--- a/views/comments/index_user.ejs
+++ b/views/comments/index_user.ejs
@@ -21,12 +21,14 @@
                 리뷰 달기
             </div>
             <div class="card-body">
-                <form>
+                <form action="/comments/write" method="POST" onsubmit="if(!confirm('한 번 작성한 리뷰는 삭제 및 수정이 불가합니다.')) {return false; }">
                     <div class="form-group">
-                        <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다. 회원만 리뷰를 작성할 수 있습니다." readonly></textarea>
+                        <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다."></textarea>
                     </div>
                     <div class=" d-flex justify-content-end">
-                        <button type="button" class="btn btn-primary">완료</button>
+                        <input type="hidden" name="writer_id" value="<%= user_id %>">
+                        <input type="hidden" name="hospital_id" value="<%= hospital._id %>">
+                        <button type="submit" class="btn btn-primary">완료</button>
                     </div>
                 </form>
 
@@ -46,6 +48,8 @@
                 </div>
             </div>
             <% }) %>
+
+        <br>
     </div>
 </body>
 
