--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
                             <div class="form-group row">
                                 <label for="createId" class="col-sm-2 col-form-label">아이디</label>
                                 <div class="col-sm-10">
-                                    <input type="text" required name="createId" class="form-control" id="createId" placeholder="ID">
+                                    <input type="text" required name="createId" class="form-control" id="createId" placeholder="ID" minlength="5" maxlength="20">
                                 </div>
                             </div>
                             <div class="form-group row">
