--- a/views/comments/index.ejs
+++ b/views/comments/index.ejs
@@ -26,7 +26,7 @@
                         <textarea name="description" id="description" cols="30" rows="5" class="form-control" placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다. 회원만 리뷰를 작성할 수 있습니다." readonly></textarea>
                     </div>
                     <div class=" d-flex justify-content-end">
-                        <button type="button" class="btn btn-primary">완료</button>
+                        <button type="button" class="btn btn-primary" disabled>완료</button>
                     </div>
                 </form>
 
@@ -45,7 +45,8 @@
                     </div>
                 </div>
             </div>
-            <% }) %>
+        <% }) %>
+        <br>
     </div>
 </body>
 
