--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,13 +44,13 @@
                             <div class="form-group row">
                                 <label for="inputId" class="col-sm-2 col-form-label">아이디</label>
                                 <div class="col-sm-10">
-                                    <input type="text" required name="inputId" class="form-control" id="inputId" placeholder="ID">
+                                    <input type="text" required name="inputId" class="form-control" id="inputId" placeholder="ID" minlength="5" maxlength="20">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">비밀번호</label>
                                 <div class="col-sm-10">
-                                    <input type="password" required name="inputPassword" class="form-control" id="inputPassword" placeholder="Password">
+                                    <input type="password" required name="inputPassword" class="form-control" id="inputPassword" placeholder="Password" minlength="7">
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                             <div class="form-group row">
                                 <label for="createPassword" class="col-sm-2 col-form-label">비밀번호</label>
                                 <div class="col-sm-10">
-                                    <input type="password" required name="createPassword" class="form-control" id="createPassword" placeholder="Password">
+                                    <input type="password" required name="createPassword" class="form-control" id="createPassword" placeholder="Password" minlength="7">
                                 </div>
                             </div>
                         </div>
