create member's mypage

--- a/views/index_user.ejs
+++ b/views/index_user.ejs
@@ -24,9 +24,7 @@
     <div class="container">
         <h2 class="mb-4"><a href="/">나아라</a></h2>
 
-        <button type="button" class="btn btn-success" onclick="location.href='#'">
-            마이페이지
-        </button>
+        <button type="button" class="btn btn-success" onclick="location.href='/mypage'">마이페이지</button>
 
         <form class="d-inline" action="/process/logout" method="POST">
             <button type="submit" class="btn btn-outline-success">
