add - report the hospital

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -248,7 +248,8 @@
                                     <div class="modal-dialog modal-dialog-centered" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLongTitle<%= index %>"><%= result.name %> &#9888; <span class="text-muted" style="font-size: 0.75rem">신고횟수</span></h5>
+                                                <h5 class="modal-title" id="exampleModalLongTitle<%= index %>"><%= result.name %></h5>
+                                                <div class="text-danger" style="font-size: 0.75rem">&#9888; 신고횟수 <%= result.reports_cnt %></div>
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
                                                 </button>
