--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,31 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>admin</title>
+    <title>나아라 - admin</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
+    <br>
     <div class="container">
-        <h2 class="mb-4"><a href="/admin">Admin</a></h2>
+        <h2 class="mb-4"><a href="/admin">관리자 페이지</a></h2>
         <a href="/" class="btn btn-dark">메인 페이지</a>
         <a href="/admin/hospitals" class="btn btn-info">데이터베이스</a>
 
-            <div class="card mt-4">
-                <div class="card-body">
-                    <h4 class="card-title">name</h4>
-                    <div class="card-subtitle text-muted mb-2">
-                        2022.01.16
-                    </div>
-                    <div class="card-text mb-2">description</div>
-                    <a href="/mypage/show/" class="btn btn-primary">Read More</a>
-                    <a href="/mypage/edit/" class="btn btn-info">Edit</a>
-                    <form action="/mypage/del/" method="POST" class="d-inline">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
+        <div class="card mt-4">
+            <div class="card-header"><h4 class="mb-0">회원관리</h4></div>
+            <div class="card-body">
+                <div class="card-subtitle text-muted mb-2">
+                    2022.01.16
                 </div>
+                <div class="card-text mb-2">description</div>
+                <a href="/mypage/show/" class="btn btn-primary">Read More</a>
+                <a href="/mypage/edit/" class="btn btn-info">Edit</a>
+                <form action="/mypage/del/" method="POST" class="d-inline">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
             </div>
+        </div>
+        <div class="card mt-4">
+            <div class="card-header"><h4 class="mb-0">병원 신고 관리</h4></div>
+            <div class="card-body">
+                <div class="card-subtitle text-muted mb-2">
+                    2022.01.16
+                </div>
+                <div class="card-text mb-2">description</div>
+                <a href="/mypage/show/" class="btn btn-primary">Read More</a>
+                <a href="/mypage/edit/" class="btn btn-info">Edit</a>
+                <form action="/mypage/del/" method="POST" class="d-inline">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
     </div>
 </body>
 
